--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.zhang.nero</groupId>
-  <artifactId>observer</artifactId>
+  <artifactId>Observer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>observer</name>
+  <name>Observer</name>
   <url>http://maven.apache.org</url>
 
   <properties>
